# tock-on-titan

./: .gcloudignore  .gitignore  .gitmodules  .travis.yml  COPYRIGHT  Common.mk  DirShim.mk  Makefile  README.md  pull_request_template.md  rust-toolchain  rustfmt.toml
.cargo/: config
apps/: Makefile.golf.mk  Makefile.tango.mk
cargo-registry/: README.md  ansi_term  arrayvec-0.5.1  (+55 more)
golf/: Cargo.toml  Makefile
golf/apps/blink/: main.c
golf/apps/gpio_test/: main.c
golf/apps/sha_test/: digest.c  digest.h  main.c
golf/src/: digest.rs  io.rs  main.rs
golf2/: Build.mk  Cargo.toml  Makefile  TockMakefile  chip_layout.ld  kernel_layout.ld  layout.ld
golf2/apps/: .gitignore
golf2/apps/.cargo/: config
golf2/apps/aes_test/: Makefile  aes.c  aes.h  main.c
golf2/apps/blink/: Makefile  main.c
golf2/apps/dcrypto_test/: Makefile  dcrypto.c  dcrypto.h  main.c
golf2/apps/gpio_test/: Makefile  main.c
golf2/apps/h1b_tests/: Cargo.toml  Makefile  layout.ld  rust-toolchain
golf2/apps/h1b_tests/src/: lib.rs  main.rs
golf2/apps/rng/: rng.c
golf2/apps/sha_test/: Makefile  digest.c  digest.h  loader.ld  main.c
golf2/apps/spin/: Makefile  main.c
golf2/apps/u2f_app/: Makefile  aes.h  aes_syscalls.c  aes_syscalls.h  asn1.c  cmac.c  cmac.h  common.h  dcrypto.c  digest_syscalls.c  digest_syscalls.h  drbg.c  drbg.h  fips.c  fips.h  fips_crypto_tests.c  fips_crypto_tests.h  fips_entropy.c  fips_health_tests.c  fips_health_tests.h  kl.c  main.c  p256.c  p256.h  p256_ecdsa.c  p256_ecdsa.h  sha256.c  signed_header.h  storage.h  tock_shims.c  trng.c  trng.h  u2f.c  u2f_hid.h  u2f_syscalls.c  u2f_transport.c  x509.c
golf2/apps/u2f_app/include/: aes_ecb_syscalls.h  asn1.h  dcrypto.h  digest_syscalls.h  fips.h  fips_crypto_tests.h  fips_entropy.h  fips_err.h  hid_dfu.h  kl.h  p256_ecdsa.h  sha256.h  system.h  trng.h  u2f.h  u2f_corp.h  u2f_hid.h  u2f_hid_corp.h  u2f_syscalls.h  x509.h
golf2/apps/u2f_test/: Makefile  main.c  u2f.h
golf2/src/: aes.rs  alarm_test.rs  dcrypto.rs  dcrypto_test.rs  debug.rs  debug_syscall.rs  digest.rs  flash_test.rs  io.rs  main.rs  nvcounter_syscall.rs  nvcounter_test.rs  personality.rs  rng.rs  rng_test.rs  virtual_flash.rs
h1_syscalls/: Cargo.toml
h1_syscalls/src/: debug_syscall.rs  digest.rs  lib.rs  nvcounter_syscall.rs
kernel/papa/: .gitignore  Build.mk  Cargo.toml
kernel/papa/src/: main.rs
src/platform/golf/: Cargo.toml  Makefile  Makefile.mk  io.rs  lib.rs  main.rs
src/platform/golf/src/: io.rs  main.rs
userspace/: .gitignore  Build.mk  CAppMakefile.mk  Cargo.toml  Makefile  layout.ld  layout_a.ld  layout_b.ld  rust-toolchain
userspace/.cargo/: config
userspace/aes_test/: Build.mk  Makefile  TockMakefile  aes.c  aes_ecb_syscalls.h  main.c
userspace/blink/: Build.mk  Makefile  TockMakefile
userspace/dcrypto_test/: Build.mk  Makefile  TockMakefile  dcrypto.c  main.c
userspace/flash_test/: Build.mk  Cargo.toml  Makefile
userspace/flash_test/src/: driver.rs  fake.rs  h1_hw.rs  lib.rs  mock_alarm.rs  smart_program.rs
userspace/gpio_test/: Build.mk  Makefile  TockMakefile  main.c
userspace/h1b_tests/: .gitignore  Build.mk  Cargo.toml  Makefile  layout.ld
userspace/h1b_tests/src/: lib.rs
userspace/h1b_tests/src/hil/: mod.rs
userspace/h1b_tests/src/hil/flash/: driver.rs  fake.rs  h1b_hw.rs  mock_alarm.rs  mod.rs  smart_program.rs
userspace/libgolf2/: Makefile  Makefile.app  README.md  aes_ecb_syscalls.h  aes_syscalls.c  dcrypto_syscalls.c  dcrypto_syscalls.h  digest_syscalls.c  digest_syscalls.h  h1b_aes_syscalls.c  h1b_aes_syscalls.h  h1b_kl_syscalls.c  h1b_kl_syscalls.h  nvcounter_syscalls.c  p256.h  personality_syscalls.c  u2f_syscalls.c  u2f_syscalls.h
userspace/libh1/: Makefile  README.md  dcrypto_syscalls.c  digest_syscalls.c  h1_aes_syscalls.c  nvcounter_syscalls.c  personality_syscalls.c  personality_syscalls.h
userspace/libh1b2/: Makefile  README.md  dcrypto_syscalls.h  drbg.h  nvcounter_syscalls.h  storage.h
userspace/low_level_debug/: Build.mk  Cargo.toml  Makefile
userspace/low_level_debug/src/: main.rs
userspace/nvcounter_ctest/: Build.mk  Makefile  TockMakefile  main.c
userspace/nvcounter_test/: Build.mk  Cargo.toml  Makefile
userspace/nvcounter_test/src/: capsule.rs  fake_flash.rs  internal.rs  lib.rs
userspace/otpilot/: Build.mk  Cargo.toml  Makefile
userspace/otpilot/src/: alarm.rs  console_processor.rs  console_reader.rs  firmware_controller.rs  flash.rs  fuse.rs  globalsec.rs  gpio.rs  gpio_control.rs  gpio_processor.rs  main.rs  manticore_support.rs  reset.rs  sfdp.rs  spi_device.rs  spi_host.rs  spi_host_h1.rs  spi_host_helper.rs  spi_processor.rs
userspace/personality_clear/: Build.mk  Makefile  TockMakefile  cmac.c  drbg.c  fips.c  fips_crypto_tests.c  fips_health_tests.c  main.c  p256.c  p256_ecdsa.c  u2f_syscalls.h
userspace/personality_clear/include/: drbg.h  fips.h  fips_aes.h  fips_crypto_tests.h  fips_err.h  fips_health_tests.h  kl.h  storage.h  u2f_hid.h
userspace/personality_test/: Build.mk  Makefile  TockMakefile  asn1.c  fips.c  fips_entropy.c  fips_health_tests.c  main.c  p256.c  tock_shims.c  u2f_syscalls.c  x509.c
userspace/personality_test/include/: cmac.h  fips_crypto_tests.h  fips_entropy.h  p256.h  p256_ecdsa.h  storage.h  u2f_corp.h
userspace/rng/: Build.mk  Makefile  TockMakefile  main.c  rng.c
userspace/sha_test/: Build.mk  Makefile  TockMakefile  digest.c  main.c
userspace/simple_fmt/: Cargo.toml
userspace/simple_fmt/src/: lib.rs
userspace/spin/: Build.mk  Makefile  README  TockMakefile  main.c
userspace/test_harness/: Cargo.toml
userspace/test_harness/src/: assertions.rs  compiler_required.rs  lib.rs
userspace/u2f_app/: Build.mk  Makefile  TockMakefile  cmac.c  drbg.c  fips.c  fips_crypto_tests.c  main.c  p256.c  p256_ecdsa.c  tock_shims.c  u2f.c  u2f_transport.c
userspace/u2f_app/include/: asn1.h  cmac.h  digest_syscalls.h  fips.h  fips_aes.h  fips_err.h  fips_health_tests.h  hid_dfu.h  kl.h  storage.h  u2f.h  u2f_hid.h  u2f_impl.h  x509.h
userspace/u2f_test/: Build.mk  Makefile  README.md  TockMakefile  main.c  u2f.c  u2f.h
(+297 files in other folders)
