[package]
name = "golf"
version = "0.1.0"
authors = ["Amit Levy <amit@amitlevy.com>"]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
rust-libcore = "*"
capsules = { git = "https://github.com/helena-project/tock" }
hotel = { path = "../hotel" }
kernel = { git = "https://github.com/helena-project/tock" }
