[package]
name = "golf2"
version = "0.1.0"
authors = ["Philip Levis <plevis@google.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
capsules = { path = "../third_party/tock/capsules" }
kernel = { path = "../third_party/tock/kernel" }
cortexm3 = { path = "../third_party/tock/arch/cortex-m3" }
hotel = { path = "../hotel" }


