# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "golf2"
version = "0.1.0"
authors = ["Philip Levis <plevis@google.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
capsules = { path = "../third_party/tock/capsules" }
kernel = { path = "../third_party/tock/kernel" }
cortexm3 = { path = "../third_party/tock/arch/cortex-m3" }
hotel = { path = "../hotel" }


