# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "papa"
version = "0.1.0"
authors = ["Oskar Senft <osk@google.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
capsules = { path = "../../third_party/tock/capsules" }
components = { path = "../../third_party/tock/boards/components" }
kernel = { path = "../../third_party/tock/kernel" }
cortexm3 = { path = "../../third_party/tock/arch/cortex-m3" }
h1 = { path = "../h1" }
h1_syscalls = { path = "../h1_syscalls" }
spiutils = { path = "../../shared-lib/spiutils", default_features = false }
