# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "h1b_tests"
version = "0.1.0"
authors = ["jrvanwhy <jrvanwhy@google.com>"]
edition = "2018"
publish = false

[dependencies]
libtock = { path = "../../third_party/libtock-rs" }
simple_print = { path = "../../simple_print" }

[dev-dependencies]
test = { path = "../test_harness" }

[profile.dev]
panic = "abort"
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true
