# Copyright 2020 lowRISC contributors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "otpilot"
version = "0.1.0"
authors = ["Oskar Senft <osk@google.com>"]
edition = "2018"
publish = false

[dependencies.core]
package = "async-support"
path = "../../third_party/libtock-rs/async-support"

[dependencies]
byteorder = { version = "1.3.4", default_features = false }
libtock = { path = "../../third_party/libtock-rs" }
manticore = { path = "../../third_party/manticore", default_features = false }
spiutils = { path = "../../shared-lib/spiutils", default_features = false }
ux = { path = "../../third_party/ux-0.1.3", default_features = false }
