# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# A formatting library designed for use by simple_print.

[package]
name = "simple_fmt"
version = "0.1.0"
authors = ["jrvanwhy <jrvanwhy@google.com>"]
edition = "2018"
publish = false

[dev-dependencies]
rayon = "1.0.3"

# Run tests with optimization because the tests are very slow (and the compile
# time fast).
[profile.test]
codegen-units = 1
debug = false
lto = true
opt-level = 3
