[package]
name = "golf"
version = "0.1.0"
authors = ["Amit Levy <amit@amitlevy.com>"]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
rust-libcore = "*"
common = { path = "../../common" }
drivers = { path = "../../drivers" }
hil = { path = "../../hil" }
hotel = { path = "../../chips/hotel" }
main = { path = "../../main" }
support = { path = "../../support" }
